Bug 1242783. Part 1 - per comment 11, increase mAmpleAudioThresholdUsecs to 2s to avoid audio underrun when BT is connected. r=kinetik. a=ritu

MozReview-Commit-ID: DBQwrDxnjjh